SUBDIRS = src

docexampledir = $(docdir)/example
docexampleechoserverdir = $(docexampledir)/echoserver
docexamplefileserverdir = $(docexampledir)/fileserver

dist_doc_DATA = README.md

dist_docexample_DATA = example/Makefile

dist_docexampleechoserver_DATA = example/echoserver/Makefile \
	example/echoserver/echoserver.cpp

dist_docexamplefileserver_DATA = example/echoserver/Makefile \
	example/fileserver/favicon.ico \
	example/fileserver/fileserver.cpp \
	example/fileserver/fileserver.css \
	example/fileserver/fileserver.js \
	example/fileserver/index.html
